--- a/gn/BUILDCONFIG.gn
+++ b/gn/BUILDCONFIG.gn
@@ -163,6 +163,7 @@ default_configs = [
   "//gn:default",
   "//gn:no_exceptions",
   "//gn:no_rtti",
+  "//gn:dynamic_crt"
 ]
 if (!is_debug) {
   default_configs += [
